Áp xụng Xai, Fuzzy logic vào gợi ý sản phẩm với 10 luật